Change new font for full tags

--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,11 @@
   --dark-cyan: #005662;
 }
 
-* {
+*, *::before, *::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Comfortaa', cursive;
 }
 
 ul, ol, li {
