--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+p {
+  line-height: 1.5em;
+}
