Mudando cor do link

--- a/src/components/utils/InfoList.module.css
+++ b/src/components/utils/InfoList.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     text-decoration: none;
-    color: #64b5f6;
+    color: #0091ea;
 }
 
 .infoList a:hover {
