Atualização de design

--- a/src/components/utils/InfoList.module.css
+++ b/src/components/utils/InfoList.module.css
@@ -34,7 +34,7 @@
 }
 
 .phone svg {
-    color: gray;
+    color: #1d588d;
 }
 
 .discord svg {
@@ -46,7 +46,7 @@
 }
 
 .instagram svg {
-    color: #517fa4;
+    color: #f56040;
 }
 
 .linkedin svg {
