--- a/src/components/pages/Home.module.css
+++ b/src/components/pages/Home.module.css
@@ -4,40 +4,69 @@
 
 .main h1 {
     font-size: 32px;
+    padding-bottom: .5em;
 }
 
 .main article section {
     width: 100%;
 }
 
-.main article section > div {
+.main article section.grid {
     display: grid;
-    grid-template-columns: 4fr 1fr;
+    grid-template-columns: 1fr 1fr;
     align-items: center;
-    grid-gap: 1em;
+    grid-gap: 2em;
 }
 
-.main article section .sectionImage {
-    width: 15em;
-    height: 10em;
-    background-image: url('../../img/home1.jpg');
-    background-size: cover;
-    border-radius: 1em;
+.main article section.grid .sectionImage {
+    width: 100%;
+    height: 100%;
+    background-image: url('../../img/NFF_3187.jpg');
+    background-size: contain;
+    background-position-x: 50%;
+    background-position-y: 50%;
+    background-repeat: no-repeat;
+    background-clip: border-box;
+    background-origin: border-box;
+    border-radius: .3em;
 }
 
-.main article p {
+.main p {
     text-align: justify;
     line-height: 1.5em;
+    padding-bottom: .5em;
 }
 
-.main article p a {
+.main section p:nth-last-child(1) {
+    padding-bottom: 0;
+}
+
+.main a {
     font-weight: bolder;
     text-decoration: none;
     color: #000000;
 }
 
-.main article p a:hover {
+.main a:hover {
     color: #2286c3;
     text-decoration: underline;
     transition: all .25s ease-in-out;
+}
+
+@media (max-width<=1024px) {
+    .main article section.grid {
+        grid-template-columns: 6fr 6fr;
+    }
+}
+
+@media (max-width:1440px) {
+    .main article section.grid {
+        grid-template-columns: 8.5fr 3.5fr;
+    }
+}
+
+@media (max-width:2560px) and (min-width: 1441px) {
+    .main article section.grid {
+        grid-template-columns: 9fr 3fr;
+    }
 }
