--- a/src/components/pages/Home.module.css
+++ b/src/components/pages/Home.module.css
@@ -28,6 +28,8 @@
     background-clip: border-box;
     background-origin: border-box;
     border-radius: .3em;
+    margin-top: 1em;
+
 }
 
 .main p {
@@ -59,10 +61,6 @@
         display: flex;
         flex-wrap: wrap;
     }
-
-    .main article section.sectionCI .sectionImage {
-        margin-top: 1em;
-    }
 }
 
 /*  Mobile M - 375px    */
@@ -72,7 +70,11 @@
 @media (max-width:425px) and (min-width: 376px) {}
 
 /*  Tablet - 768px  */
-@media (max-width:768px) and (min-width: 426px) {}
+@media (max-width:768px) and (min-width: 426px) {
+    .main article section.sectionCI .sectionImage {
+        height: 22em;
+    }
+}
 
 /*  Laptop - 1024px */
 @media (max-width:1024px) and (min-width: 769px) {
@@ -95,6 +97,7 @@
         width: 100%;
         height: 100%;
         background-size: contain;
+        margin-top: 0em;
     }
 }
 
