--- a/src/components/pages/Home.module.css
+++ b/src/components/pages/Home.module.css
@@ -76,3 +76,40 @@
     }
 }
 
+/*  Laptop - 1024px */
+@media (max-width:1024px) and (min-width: 769px) {
+    .main article section.sectionCI {
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+
+/*  Laptop L - 1440px*/
+@media (min-width: 1024px) {
+    .main article section.sectionCI {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 1em;
+        align-items: center;
+    }
+
+    .main article section.sectionCI .sectionImage {
+        width: 100%;
+        height: 100%;
+        background-size: contain;
+        margin-top: 0em;
+    }
+}
+
+@media (max-width:1440px) and (min-width: 1025px) {
+    .main article section.sectionCI {
+        grid-template-columns: 8.5fr 3.5fr;
+    }
+}
+
+/*  4K - 2560px */
+@media (max-width:2560px) and (min-width: 1441px) {
+    .main article section.sectionCI {
+        grid-template-columns: 9fr 3fr;
+    }
+}
