--- a/src/components/utils/InfoList.module.css
+++ b/src/components/utils/InfoList.module.css
@@ -1,22 +1,24 @@
 .list_contact {
+    width: 100%;
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
 
 .link_contact {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
-    flex-direction: column;
     align-items: center;
 
-    width: 6em;
     padding: 1em;
     margin-right: .3em;
 
     background-color: #26323875;
     color: #2286c3;
     border-radius: .5em;
-    border: .1em solid #6d6d6d;
+    box-shadow: 2px 2px 5px #212121;
     text-decoration: none;
 }
 
@@ -26,8 +28,7 @@
 }
 
 .link_contact:hover {
-    border: .1em solid transparent;
-    background-color: black;
+    background-color: #212121;
     transition: all .25s ease-in-out;
 }
 
