--- a/src/components/pages/Home.module.css
+++ b/src/components/pages/Home.module.css
@@ -22,21 +22,6 @@
     flex-wrap: wrap;
 }
 
-.main article section.sectionCI .sectionImage {
-    width: 100%;
-    height: 12em;
-    background-image: url('../../img/NFF_3187.jpg');
-    background-size: cover;
-    background-position-x: 50%;
-    background-position-y: 50%;
-    background-repeat: no-repeat;
-    background-clip: border-box;
-    background-origin: border-box;
-    border-radius: .3em;
-    margin-top: 1em;
-
-}
-
 .main p {
     text-align: justify;
     line-height: 1.5em;
@@ -75,46 +60,66 @@
 @media (max-width:425px) and (min-width: 376px) {}
 
 /*  Tablet - 768px  */
-@media (max-width:768px) and (min-width: 426px) {
-    .main article section.sectionCI .sectionImage {
-        height: 22em;
-    }
-}
+@media (max-width:768px) and (min-width: 426px) {}
 
 /*  Laptop - 1024px */
-@media (max-width:1024px) and (min-width: 769px) {
-    .main article section.sectionCI {
-        display: flex;
-        flex-wrap: wrap;
-    }
-}
+@media (max-width:1024px) and (min-width: 769px) {}
 
 /*  Laptop L - 1440px*/
-@media (min-width: 1024px) {
-    .main article section.sectionCI {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 1em;
-        align-items: center;
-    }
+@media (min-width: 1024px) {}
 
-    .main article section.sectionCI .sectionImage {
-        width: 100%;
-        height: 100%;
-        background-size: contain;
-        margin-top: 0em;
-    }
-}
-
-@media (max-width:1440px) and (min-width: 1025px) {
-    .main article section.sectionCI {
-        grid-template-columns: 8.5fr 3.5fr;
-    }
-}
+@media (max-width:1440px) and (min-width: 1025px) {}
 
 /*  4K - 2560px */
 @media (max-width:2560px) and (min-width: 1441px) {
     .main article section.sectionCI {
         grid-template-columns: 9fr 3fr;
     }
+}
+
+.tecnologias {
+    padding-top: 2.5em;
+}
+
+h2 {
+    text-align: center;
+}
+
+.tecnologias>a {
+    display: flex;
+
+}
+
+.boxTecnologia {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: .5em;
+    padding-top: .7em;
+}
+
+.cardTecnologia {
+    min-width: 10em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: .3em;
+    background-color: #ffffff10;
+    color: #ffffff7a;
+    padding: 1em;
+    flex-wrap: wrap;
+}
+
+.cardTecnologia:hover {
+    background-color: #ffffff30;
+    color: #ffffff;
+    transition: all .25s ease-in-out;
+    cursor: pointer;
+
+
+}
+
+.iconTecnologia {
+    font-size: 2.5em;
 }
